...
                .foregroundColor(.black)
                .navigationBarBackButtonHidden(true)
            }
            
            Spacer()
            
            Text("Create Your Account")
                .font(.system(size: 28, weight: .bold))

            Spacer()

            // Formulaire
            VStack(spacing: 30) {
...
